# courtcompact-booking

./: .cspell.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  main.py  phone.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  1750235ec0a1_initial.py  86633885a5ed_initial.py  86694fe0dfef_initial.py  e494e03bb8fd_initial.py  eed0d5859050_initial.py
bot/: __init__.py  deps.py  router.py  setup.py
bot/handlers/: auth.py  base.py  callback_args.py
bot/handlers/admin/: _utils.py  menu.py
bot/handlers/admin/courts/: __init__.py  create_select_location.py  (+10 more)
bot/handlers/auth/: __init__.py  _utils.py  contact.py  main_menu.py  show_auth_request.py  start.py  unknown_message.py
bot/handlers/booking/: __init__.py  _utils.py  calendar_nav.py  cancel_menu.py  cancellation.py  court_selection.py  date_selection.py  my_bookings.py  select_court.py  select_location.py  slot_selection.py  trainer_selection.py
bot/handlers/schedule/: __init__.py  by_date.py  by_date_courts.py  court_day.py  court_week.py  trainer_menu.py  trainer_view.py  weekly.py  weekly_courts.py
config/: __init__.py  settings.py
data/: booking.db
db/: __init__.py  models.py
db/repositories/: __init__.py  admin.py  booking.py  court.py  location.py  student.py  trainer.py  user.py
localization/: __init__.py  base.py  ru.py
scripts/: create_admin.py  seed_data.py
services/: __init__.py  booking.py  registration.py  schedule.py
tests/: conftest.py  test_auth.py
(+37 files in other folders)
